I updated assignment_2 file.

--- a/02_assignments/assignment_2.ipynb
+++ b/02_assignments/assignment_2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ffd43063",
    "metadata": {},
    "outputs": [],
@@ -51,15 +51,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6449268e-0e33-4976-83cf-5ada4b29597f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           MOSTYPE     MAANTHUI      MGEMOMV     MGEMLEEF     MOSHOOFD  \\\n",
+      "count  5822.000000  5822.000000  5822.000000  5822.000000  5822.000000   \n",
+      "mean     24.253349     1.110615     2.678805     2.991240     5.773617   \n",
+      "std      12.846706     0.405842     0.789835     0.814589     2.856760   \n",
+      "min       1.000000     1.000000     1.000000     1.000000     1.000000   \n",
+      "25%      10.000000     1.000000     2.000000     2.000000     3.000000   \n",
+      "50%      30.000000     1.000000     3.000000     3.000000     7.000000   \n",
+      "75%      35.000000     1.000000     3.000000     3.000000     8.000000   \n",
+      "max      41.000000    10.000000     5.000000     6.000000    10.000000   \n",
+      "\n",
+      "            MGODRK       MGODPR       MGODOV       MGODGE       MRELGE  ...  \\\n",
+      "count  5822.000000  5822.000000  5822.000000  5822.000000  5822.000000  ...   \n",
+      "mean      0.696496     4.626932     1.069907     3.258502     6.183442  ...   \n",
+      "std       1.003234     1.715843     1.017503     1.597647     1.909482  ...   \n",
+      "min       0.000000     0.000000     0.000000     0.000000     0.000000  ...   \n",
+      "25%       0.000000     4.000000     0.000000     2.000000     5.000000  ...   \n",
+      "50%       0.000000     5.000000     1.000000     3.000000     6.000000  ...   \n",
+      "75%       1.000000     6.000000     2.000000     4.000000     7.000000  ...   \n",
+      "max       9.000000     9.000000     5.000000     9.000000     9.000000  ...   \n",
+      "\n",
+      "            ALEVEN     APERSONG      AGEZONG      AWAOREG       ABRAND  \\\n",
+      "count  5822.000000  5822.000000  5822.000000  5822.000000  5822.000000   \n",
+      "mean      0.076606     0.005325     0.006527     0.004638     0.570079   \n",
+      "std       0.377569     0.072782     0.080532     0.077403     0.562058   \n",
+      "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
+      "25%       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
+      "50%       0.000000     0.000000     0.000000     0.000000     1.000000   \n",
+      "75%       0.000000     0.000000     0.000000     0.000000     1.000000   \n",
+      "max       8.000000     1.000000     1.000000     2.000000     7.000000   \n",
+      "\n",
+      "           AZEILPL     APLEZIER       AFIETS      AINBOED     ABYSTAND  \n",
+      "count  5822.000000  5822.000000  5822.000000  5822.000000  5822.000000  \n",
+      "mean      0.000515     0.006012     0.031776     0.007901     0.014256  \n",
+      "std       0.022696     0.081632     0.210986     0.090463     0.119996  \n",
+      "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
+      "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
+      "50%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
+      "75%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
+      "max       1.000000     2.000000     3.000000     2.000000     2.000000  \n",
+      "\n",
+      "[8 rows x 85 columns]\n",
+      "The dataset contains 5822 observations rows.\n",
+      "The dataset contains 86 observations columns.\n",
+      "The Purchase variable type is object.\n",
+      "The Purchase variable level is ['No' 'Yes'].\n",
+      "We have 85 predictors variables.\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the \"Caravan\" dataset using the \"load_data\" function from the ISLP package\n",
     "Caravan = load_data('Caravan')\n",
     "\n",
-    "# Add your code here"
+    "# Add your code here\n",
+    "print(Caravan.describe())\n",
+    "num_rows = Caravan.shape[0]\n",
+    "print(f'The dataset contains {num_rows} observations rows.')\n",
+    "num_col = Caravan.shape[1]\n",
+    "print(f'The dataset contains {num_col} observations columns.')\n",
+    "purchase_type = Caravan['Purchase'].dtype\n",
+    "print(f'The Purchase variable type is {purchase_type}.')\n",
+    "purchase_level = Caravan['Purchase'].unique()\n",
+    "print(f'The Purchase variable level is {purchase_level}.')\n",
+    "num_predictors = num_col -1\n",
+    "print(f'We have {num_predictors} predictors variables.')"
    ]
   },
   {
@@ -81,7 +145,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here"
+    "# Add your code her\n",
+    "#(i) We have 5822 rows from the dataset.\n",
+    "#(ii) We have 86 columns form the dataset.\n",
+    "#(iii) The Purchase variable type is object. The Purchase variable level is ['No' 'Yes'].\n",
+    "#(iv) We have 85 predictors variables."
    ]
   },
   {
@@ -94,10 +162,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "4c2901b1-82ce-4729-88d9-7d9985336221",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    MOSTYPE  MAANTHUI   MGEMOMV  MGEMLEEF  MOSHOOFD    MGODRK    MGODPR  \\\n",
+      "0  0.680906  -0.27258  0.406697 -1.216964  0.779405 -0.694311  0.217444   \n",
+      "1  0.992297  -0.27258 -0.859500 -1.216964  0.779405  0.302552 -0.365410   \n",
+      "2  0.992297  -0.27258 -0.859500 -1.216964  0.779405 -0.694311 -0.365410   \n",
+      "3 -1.187437  -0.27258  0.406697  0.010755 -0.970980  1.299414 -0.948264   \n",
+      "4  1.225840  -0.27258  1.672893 -1.216964  1.479559  0.302552 -0.365410   \n",
+      "\n",
+      "     MGODOV    MGODGE    MRELGE  ...   ALEVEN  APERSONG   AGEZONG  AWAOREG  \\\n",
+      "0 -0.068711 -0.161816  0.427670  ... -0.20291 -0.073165 -0.081055 -0.05992   \n",
+      "1 -0.068711  0.464159 -0.096077  ... -0.20291 -0.073165 -0.081055 -0.05992   \n",
+      "2  0.914172  0.464159 -1.667319  ... -0.20291 -0.073165 -0.081055 -0.05992   \n",
+      "3  0.914172  0.464159 -0.619824  ... -0.20291 -0.073165 -0.081055 -0.05992   \n",
+      "4 -0.068711  0.464159  0.427670  ... -0.20291 -0.073165 -0.081055 -0.05992   \n",
+      "\n",
+      "     ABRAND   AZEILPL  APLEZIER   AFIETS   AINBOED  ABYSTAND  \n",
+      "0  0.764971 -0.022706  -0.07365 -0.15062 -0.087348 -0.118816  \n",
+      "1  0.764971 -0.022706  -0.07365 -0.15062 -0.087348 -0.118816  \n",
+      "2  0.764971 -0.022706  -0.07365 -0.15062 -0.087348 -0.118816  \n",
+      "3  0.764971 -0.022706  -0.07365 -0.15062 -0.087348 -0.118816  \n",
+      "4  0.764971 -0.022706  -0.07365 -0.15062 -0.087348 -0.118816  \n",
+      "\n",
+      "[5 rows x 85 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Select predictors (excluding the 86th column)\n",
     "predictors = Caravan.iloc[:, :-1]\n",
@@ -126,8 +223,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "#(v) As predictor variables are input used to predict the response variable, it is important to standardize the predictor variables. The numerical stability can be improved, and ensure that all predictors contribute equally to the model.\n",
+    "#(vi) Since the variable type is object and the level is 'yes' or 'no', Purchase variable is not a numerical variable.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c931d24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -140,12 +247,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "230fd782-cfe1-45e6-ad00-a67e6b04d024",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here"
+    "# Add your code here\n",
+    "#(vii)When you set a seed, it will ensure that the random processes are reproducible, consistent, and debuggable. The particular seed value is not important, if a particular seed value got choosen twice, the seed value will help you to achieve reproducibility.\n"
    ]
   },
   {
@@ -158,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "cbe9f219-571b-476b-9f5b-b47431c803b1",
    "metadata": {},
    "outputs": [],
@@ -176,7 +284,11 @@
     "testing_X = predictors_standardized[~split]\n",
     "\n",
     "# Define the testing set for Y (response)\n",
-    "testing_Y = Caravan.loc[~split, 'Purchase']\n"
+    "testing_Y = Caravan.loc[~split, 'Purchase']\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report"
    ]
   },
   {
@@ -189,12 +301,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "e6a117de-279b-4320-b64e-4051ba2887d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.889280677009873\n",
+      "Error: 0.11071932299012699\n"
+     ]
+    }
+   ],
    "source": [
-    "# Add your code here"
+    "# Add your code here\n",
+    "k=1\n",
+    "knn=KNeighborsClassifier(n_neighbors=k)\n",
+    "knn.fit(training_X,training_Y)\n",
+    "\n",
+    "y_pred = knn.predict(testing_X)\n",
+    "\n",
+    "accuracy = accuracy_score(testing_Y,y_pred)\n",
+    "error = 1- accuracy\n",
+    "\n",
+    "print(f'Accuracy: {accuracy}')\n",
+    "print(f'Error: {error}')\n"
    ]
   },
   {
@@ -209,22 +341,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "74dbe6c4-1a4d-4f06-9e2e-597da03952ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prediction accuracy rate"
+    "# prediction accuracy rate\n",
+    "#(x) The prediction accuracy is 0.8893"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "9384d3f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prediction error rate"
+    "# prediction error rate\n",
+    "#(xi) The predictor error is 0.1107"
    ]
   },
   {
@@ -237,15 +371,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "c89ade30-3465-4104-b300-61d78b319d3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.357325538911216\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the percentage of customers who purchase insurance\n",
     "percentage_purchase = (Caravan['Purchase'].eq('Yes').sum() / Caravan['Purchase'].eq('No').sum()) * 100\n",
     "\n",
     "print(percentage_purchase)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "296487de",
+   "metadata": {},
+   "source": [
+    "#(xii) As The percentage of customers who purchase insurance is 6.35%, and the baseline accuracy is 1-0.0635=0.9365. The baseline accuracy is higher than the KNN model prediction accuracy, which means the KNN model with K=1, is not performing better than simply predicting."
    ]
   },
   {
@@ -258,12 +408,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "fedbe4f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.92524682651622\n",
+      "Error: 0.07475317348377997\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "k=3\n",
+    "knn=KNeighborsClassifier(n_neighbors=k)\n",
+    "knn.fit(training_X,training_Y)\n",
+    "\n",
+    "y_pred = knn.predict(testing_X)\n",
+    "\n",
+    "accuracy = accuracy_score(testing_Y,y_pred)\n",
+    "error = 1- accuracy\n",
+    "\n",
+    "print(f'Accuracy: {accuracy}')\n",
+    "print(f'Error: {error}')\n",
+    "\n",
+    "#(xiii)As k=3 in KNN model, the predict accuracy is 0.92, whcih is still lower than the baseline accuracy 0.9365. It is performing better than KNN model with K=1, but still worse than simply random guess."
    ]
   },
   {
@@ -321,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   },
   "vscode": {
    "interpreter": {
