--- a/03_exercises/7_leave_one_out_cross_validation_exercise.ipynb
+++ b/03_exercises/7_leave_one_out_cross_validation_exercise.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "6edbc31d-be7c-4dd3-bb07-a9f681754433",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,10 @@
     "\n",
     "# Import new libraries and objects\n",
     "from sklearn.model_selection import cross_validate\n",
-    "from ISLP.models import sklearn_sm"
+    "from ISLP.models import sklearn_sm\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore') # mute warning messages"
    ]
   },
   {
@@ -59,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "0419abe2-c733-4124-b202-45f6a8bf953e",
    "metadata": {},
    "outputs": [],
@@ -67,7 +70,72 @@
     "Auto = load_data('Auto')\n",
     "Auto_train, Auto_valid = train_test_split(Auto,\n",
     "                                         test_size=196, # split in two\n",
-    "                                         random_state=0) # random seed"
+    "                                         random_state=4) # random seed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "6657771b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.0 18.0\n",
+      "20.5 20.5\n",
+      "15.0 15.0\n",
+      "22.0 22.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a,b in zip(Auto_train['mpg'], Auto_valid['mpg']):\n",
+    "    if a == b:\n",
+    "        print(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "ce22fcf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "265"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Auto['mpg']) - len(set(Auto['mpg']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "97718c74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.power.outer(2,3)"
    ]
   },
   {
@@ -80,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "1c531b5b-803b-42ed-88f0-e20242e0ad85",
    "metadata": {},
    "outputs": [],
@@ -102,10 +170,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "dda5e219-dcd0-4569-a6b3-02954d68d2fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.755407959228602"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_valid = hp_mm.transform(Auto_valid)\n",
     "y_valid = Auto_valid['mpg']\n",
@@ -182,12 +261,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "752e078f-f2a6-40c9-9597-e45a0698b8d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "357    24.2\n",
+       "94     12.0\n",
+       "218    33.5\n",
+       "355    30.7\n",
+       "292    34.1\n",
+       "       ... \n",
+       "256    20.6\n",
+       "131    16.0\n",
+       "249    20.2\n",
+       "152    15.0\n",
+       "362    28.0\n",
+       "Name: mpg, Length: 196, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Your codes"
+    "## Your codes\n",
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8d5984cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>357</th>\n",
+       "      <td>24.2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>146.0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>2930</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>81</td>\n",
+       "      <td>3</td>\n",
+       "      <td>datsun 810 maxima</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>225</td>\n",
+       "      <td>4951</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>73</td>\n",
+       "      <td>1</td>\n",
+       "      <td>buick electra 225 custom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>33.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1945</td>\n",
+       "      <td>16.8</td>\n",
+       "      <td>77</td>\n",
+       "      <td>3</td>\n",
+       "      <td>datsun f-10 hatchback</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355</th>\n",
+       "      <td>30.7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>76</td>\n",
+       "      <td>3160</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>81</td>\n",
+       "      <td>2</td>\n",
+       "      <td>volvo diesel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>34.1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1975</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>79</td>\n",
+       "      <td>3</td>\n",
+       "      <td>maxda glc deluxe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>231.0</td>\n",
+       "      <td>105</td>\n",
+       "      <td>3380</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>78</td>\n",
+       "      <td>1</td>\n",
+       "      <td>buick century special</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>3781</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>1</td>\n",
+       "      <td>chevrolet chevelle malibu classic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249</th>\n",
+       "      <td>20.2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>139</td>\n",
+       "      <td>3570</td>\n",
+       "      <td>12.8</td>\n",
+       "      <td>78</td>\n",
+       "      <td>1</td>\n",
+       "      <td>mercury monarch ghia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>3432</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1</td>\n",
+       "      <td>mercury monarch</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>88</td>\n",
+       "      <td>2605</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>chevrolet cavalier</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>196 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mpg  cylinders  displacement  horsepower  weight  acceleration  year  \\\n",
+       "357  24.2          6         146.0         120    2930          13.8    81   \n",
+       "94   12.0          8         455.0         225    4951          11.0    73   \n",
+       "218  33.5          4          85.0          70    1945          16.8    77   \n",
+       "355  30.7          6         145.0          76    3160          19.6    81   \n",
+       "292  34.1          4          86.0          65    1975          15.2    79   \n",
+       "..    ...        ...           ...         ...     ...           ...   ...   \n",
+       "256  20.6          6         231.0         105    3380          15.8    78   \n",
+       "131  16.0          6         250.0         100    3781          17.0    74   \n",
+       "249  20.2          8         302.0         139    3570          12.8    78   \n",
+       "152  15.0          6         250.0          72    3432          21.0    75   \n",
+       "362  28.0          4         112.0          88    2605          19.6    82   \n",
+       "\n",
+       "     origin                               name  \n",
+       "357       3                  datsun 810 maxima  \n",
+       "94        1           buick electra 225 custom  \n",
+       "218       3              datsun f-10 hatchback  \n",
+       "355       2                       volvo diesel  \n",
+       "292       3                   maxda glc deluxe  \n",
+       "..      ...                                ...  \n",
+       "256       1              buick century special  \n",
+       "131       1  chevrolet chevelle malibu classic  \n",
+       "249       1               mercury monarch ghia  \n",
+       "152       1                    mercury monarch  \n",
+       "362       1                 chevrolet cavalier  \n",
+       "\n",
+       "[196 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Auto_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9d629f6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "352    24.167645\n",
+       "16     24.650897\n",
+       "288    17.402115\n",
+       "281    25.778485\n",
+       "201    28.839082\n",
+       "         ...    \n",
+       "170    28.839082\n",
+       "29     26.100653\n",
+       "162    22.556804\n",
+       "149    29.483418\n",
+       "366    26.744989\n",
+       "Length: 196, dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_pred"
    ]
   },
   {
@@ -201,9 +550,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dsi",
+   "display_name": "dsi_participant",
    "language": "python",
-   "name": "dsi"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -215,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.undefined"
   }
  },
  "nbformat": 4,
