--- a/03_exercises/8_k_fold_cross_validation_exercise.ipynb
+++ b/03_exercises/8_k_fold_cross_validation_exercise.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6edbc31d-be7c-4dd3-bb07-a9f681754433",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0670bc89",
    "metadata": {},
    "outputs": [],
@@ -66,10 +66,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "16c32ccf-4e6d-412d-a89a-7f954cb731d5",
+   "execution_count": 6,
+   "id": "b3afa534",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#From Hollie\n",
+    "Y = Auto['mpg']\n",
+    "cv_error = np.zeros(5) # final results array\n",
+    "\n",
+    "H = np.array(Auto['horsepower'])\n",
+    "M = sklearn_sm(sm.OLS)\n",
+    "\n",
+    "for i, d in enumerate(range(1,6)):\n",
+    "    # loop over d=1,2,3,4,5\n",
+    "    # i = 0,1,2,3,4\n",
+    "    X = np.power.outer(H, np.arange(d+1))\n",
+    "    M_CV = cross_validate(M,X,Y,cv=Auto.shape[0])\n",
+    "    cv_error[i] = np.mean(M_CV['test_score'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "795e2e9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 [[1]\n",
+      " [1]]\n",
+      "1 1 [[1 2]\n",
+      " [1 3]]\n",
+      "2 2 [[1 2 4]\n",
+      " [1 3 9]]\n",
+      "3 3 [[ 1  2  4  8]\n",
+      " [ 1  3  9 27]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, d in enumerate(range(4)):\n",
+    "    print(i,d,np.power.outer([2,3], np.arange(d+1)))\n",
+    "    #print(i,d,np.power.outer(2, d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e4a284f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for d in range(10):\n",
+    "    print(d+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "16c32ccf-4e6d-412d-a89a-7f954cb731d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([24.20766449, 19.18533142, 19.27626666, 19.47848403, 19.13720581])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cv_error = np.zeros(5)\n",
     "H = np.array(Auto['horsepower'])\n",
@@ -90,6 +178,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b4d7ac3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([0.0007019 , 0.00044227, 0.00037026, 0.00043511, 0.00037313,\n",
+       "        0.00034714, 0.00033593, 0.00050378, 0.00041604, 0.00034881]),\n",
+       " 'score_time': array([0.00025439, 0.00017691, 0.00015903, 0.00018311, 0.00016308,\n",
+       "        0.00015593, 0.00014687, 0.00024414, 0.00016618, 0.00015903]),\n",
+       " 'test_score': array([15.93830994, 15.01126019, 19.39037386, 24.3137491 , 18.42505858,\n",
+       "        23.36485902, 22.47391839, 24.9714491 , 10.30948691, 17.17359306])}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M_CV"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "278c6959-9713-480a-bbe7-b58502a9d49f",
    "metadata": {},
@@ -100,9 +214,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dsi",
+   "display_name": "dsi_participant",
    "language": "python",
-   "name": "dsi"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -114,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
