--- a/03_exercises/9_the_bootstrap_exercise.ipynb
+++ b/03_exercises/9_the_bootstrap_exercise.ipynb
@@ -89,7 +89,7 @@
     "def alpha_func(D, idx):\n",
     "   cov_ = np.cov(D[['X','Y']].loc[idx], rowvar=False)\n",
     "   return ((cov_[1,1] - cov_[0,1]) /\n",
-    "           (cov_[0,0]+cov_[1,1]-2*cov_[0,1]))"
+    "           (cov_[0,0]+cov_[1,1]-2*cov_[0,1]))\n"
    ]
   },
   {
