--- a/02_assignments/assignment_3.ipynb
+++ b/02_assignments/assignment_3.ipynb
@@ -467,7 +467,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here"
+    "# Add your code here\n"
    ]
   },
   {
