--- a/01_materials/notebooks/Regression-1.ipynb
+++ b/01_materials/notebooks/Regression-1.ipynb
@@ -312,7 +312,7 @@
    "metadata": {},
    "source": [
     "This question guides our initial exploration: the columns in the data that we are interested in are \n",
-    "- sqft (house size, in livable square feet)\n",
+    "- sq__ft (house size, in livable square feet)\n",
     "-  price (house sale price, in US dollars (USD)). "
    ]
   },
@@ -322,7 +322,7 @@
    "source": [
     "### Visualizing the Data\n",
     "\n",
-    "Now, let’s create a scatter plot to visualize the relationship between he predictor variable (**house size**) on the x-axis, and we place the response variable that we want to predict (**sale price**) on the y-axis."
+    "Now, let’s create a scatter plot to visualize the relationship between the predictor variable (**house size**) on the x-axis, and we place the response variable that we want to predict (**sale price**) on the y-axis."
    ]
   },
   {
