Adding a disclaimer for the Plotly graph that it won't work unless it's clone-blocked.

--- a/01_materials/notebooks/Regression-2.ipynb
+++ b/01_materials/notebooks/Regression-2.ipynb
@@ -33473,7 +33473,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feel free to drag, rotate, and explore the 3D graph above, as it is fully interactive. You can move around the graph to get a better view of how square footage, the number of bedrooms, and price relate to each other."
+    "\n",
+    "\n",
+    "> Feel free to **drag, rotate, and explore** the 3D graph above, as it offers full interactivity. You can move around the graph to better understand the relationships between square footage, number of bedrooms, and price.  \n",
+    "> \n",
+    "> **Disclaimer**: This 3D interactive feature will only work if you run the notebook locally on your computer. It won't display interactively on GitHub.\n",
+    "\n"
    ]
   },
   {
