--- a/01_materials/notebooks/Classification-2.ipynb
+++ b/01_materials/notebooks/Classification-2.ipynb
@@ -1644,7 +1644,6 @@
    "source": [
     "$$\n",
     "\\text{Accuracy} = \\frac{\\text{Number of Correct Predictions}}{\\text{Total Number of Predictions}}\n",
-    "\n",
     "$$"
    ]
   },
@@ -2764,7 +2763,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2778,9 +2777,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
