Assignment 1 added in.

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -13,9 +13,9 @@
    "id": "5fce0350-2a17-4e93-8d4c-0b8748fdfc32",
    "metadata": {},
    "source": [
-    "All required code is a single line. The length of your response for questions that require identification and/or interpretation will not be considered in evaluation. For example, if a question can be answered with 'yes/no', or a numeric value, you may simply state as much. \n",
+    "You only need to write one line of code for each question. When answering questions that ask you to identify or interpret something, the length of your response doesn’t matter. For example, if the answer is just ‘yes,’ ‘no,’ or a number, you can just give that answer without adding anything else.\n",
     "\n",
-    "We will go through comparable code and concepts in the live learning session. If you run into trouble, start by using the help `help()` function in Python, to get information about the datasets and function in question. The internet is also a great resource when coding (though note that no outside searches are required by the assignment!). If you do incorporate code from the internet, please cite the source within your code (providing a URL is sufficient).\n",
+    "We will go through comparable code and concepts in the live learning session. If you run into trouble, start by using the help `help()` function in Python, to get information about the datasets and function in question. The internet is also a great resource when coding (though note that **no outside searches are required by the assignment!**). If you do incorporate code from the internet, please cite the source within your code (providing a URL is sufficient).\n",
     "\n",
     "Please bring questions that you cannot work out on your own to office hours, work periods or share with your peers on Slack. We will work with you through the issue."
    ]
@@ -25,9 +25,11 @@
    "id": "5fc5001c-7715-4ebe-b0f7-e4bd04349629",
    "metadata": {},
    "source": [
-    "### Question 1: Simple Linear Regression \n",
+    "### Classification using KNN\n",
     "\n",
-    "Let's set up our workspace and use the `Boston` dataset in the `ISLP` library. Print `Boston` to learn more about the dataset."
+    "Let's set up our workspace and use the **Wine dataset** from `scikit-learn`. This dataset contains 178 wine samples with 13 chemical features, used to classify wines into different classes based on their origin.\n",
+    "\n",
+    "The **response variable** is `class`, which indicates the type of wine. We'll use all of the chemical features to predict this response variable."
    ]
   },
   {
@@ -38,26 +40,18 @@
    "outputs": [],
    "source": [
     "# Import standard libraries\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "from matplotlib.pyplot import subplots\n",
-    "import statsmodels.api as sm\n",
+    "import numpy as np\n",
+    "import random\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "# Import specific objects\n",
+    "import matplotlib.colors as mcolors\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "from statsmodels.stats.outliers_influence \\\n",
-    "     import variance_inflation_factor as VIF\n",
-    "from statsmodels.stats.anova import anova_lm\n",
-    "\n",
-    "from ISLP import load_data\n",
-    "from ISLP.models import (ModelSpec as MS,\n",
-    "                         summarize,\n",
-    "                         poly)"
+    "from sklearn.metrics import recall_score, precision_score\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -67,92 +61,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the \"Boston\" dataset using the \"load_data\" function from the ISLP package\n",
-    "Boston = load_data('Boston')"
+    "from sklearn.datasets import load_wine\n",
+    "\n",
+    "# Load the Wine dataset\n",
+    "wine_data = load_wine()\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "wine_df = pd.DataFrame(wine_data.data, columns=wine_data.feature_names)\n",
+    "\n",
+    "# Bind the 'class' (wine target) to the DataFrame\n",
+    "wine_df['class'] = wine_data.target\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "wine_df\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9312cc4e-e77d-41c9-84ce-48384ca51984",
+   "id": "721b2b17",
    "metadata": {},
    "source": [
-    "Before we fit and review model outputs, we should visualize our data. Review the code and plot, shown below. Answer the following questions:\n",
+    "#### **Question 1:** \n",
+    "#### Data inspection\n",
     "\n",
-    "_(i)_ What are the `medv` and `dis` variables being plotted? (Hint: review this [link](https://islp.readthedocs.io/en/latest/datasets/Boston.html))\n",
+    "Before fitting any model, it is essential to understand our data. **Use Python code** to answer the following questions about the **Wine dataset**:\n",
     "\n",
-    "_(ii)_ What concept ‘defines’ the plotted line?"
+    "_(i)_ How many observations (rows) does the dataset contain?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5486481b-e496-41f0-bc9c-a7073c82fbb8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract the variables\n",
-    "medv = Boston['medv'].values.reshape(-1, 1)\n",
-    "dis = Boston['dis'].values.reshape(-1, 1)\n",
-    "\n",
-    "# Plot data\n",
-    "plt.scatter(dis, medv, label='Data')\n",
-    "plt.xlabel('dis')\n",
-    "plt.ylabel('medv')\n",
-    "\n",
-    "# Fit a linear regression model\n",
-    "lm = LinearRegression()\n",
-    "lm.fit(dis, medv)\n",
-    "\n",
-    "# Plot the regression line\n",
-    "plt.plot(dis, lm.predict(dis), color='red', label='Regression Line')\n",
-    "\n",
-    "# Add labels and legend\n",
-    "plt.xlabel('dis')\n",
-    "plt.ylabel('medv')\n",
-    "plt.legend()\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "3fb5ea2a-ee48-448c-a028-784236c1c999",
-   "metadata": {},
-   "source": [
-    "Consider the variables plotted above. In the context of the `Boston` dataset:\n",
-    "\n",
-    "_(iii)_ What is the (implied) null hypothesis? What is the (implied) alternative hypothesis?\n",
-    "\n",
-    "_(iv)_ Now, let’s fit a simple regression model, using the general syntax `sm.OLS()` and `model.fit()`. As above, use `medv` as the response variable Y, and `dis` as the predictor variable X. (Hint: use the syntax `sm.add_constant` with the appropriate argument)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88dbac72",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ebacfc94-686d-4c5a-a2f3-15240f13d212",
-   "metadata": {},
-   "source": [
-    "Review your model output to answer the following questions (Hint: use the `summary` and `conf_int` functions):    \n",
-    "_(v)_ What are the _coefficient estimates_ for $B_0$ (intercept) and $B_1$ (slope)?  \n",
-    "_(vi)_ What are the _standard errors_ for $B_0$ and $B_1$?  \n",
-    "_(vii)_ What are the _confidence intervals_ for $B_0$ and $B_1$?  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ffe554a",
+   "id": "56916892",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,19 +101,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7df8b44",
+   "id": "f7573b59",
    "metadata": {},
    "source": [
-    "\n",
-    "Now, let's interpret the model output.  \n",
-    "_(viii)_ Is the model a good fit? (Hint: review $R^2$)  \n",
-    "_(ix)_ Do we reject the (implied) null hypothesis? Why or why not? (Hint: review model $F$ statistic, $p$ value).  "
+    "_(ii)_ How many variables (columns) does the dataset contain?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7d2b412",
+   "id": "df0ef103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,70 +119,207 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4f7116b-6a10-41be-85a3-9d11402f02bd",
+   "id": "cb5180c7",
    "metadata": {},
    "source": [
-    "### Question 2: Multiple Linear Regression \n",
-    "\n",
-    "We'll continue to use the `Boston` dataset for this question."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bce1e0bf-3c57-47c8-af30-464e6f584169",
-   "metadata": {},
-   "source": [
-    "_(i)_ Fit a multiple linear regression, with two predictor variables: $X_1$ is `dis`, and $X_2$ is `rm`. As before, keep `medv` as the response variable Y. (Hint: use the syntax `sm.add_constant` with the appropriate arguments)."
+    "_(iii)_ What is the 'variable type' of the response variable `class` (e.g., 'integer', 'category', etc.)? What are the 'levels' (unique values) of the variable?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be67292e",
+   "id": "47989426",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here"
+    "# Your answer here"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1f9f4f97-5935-4cd5-a691-512d4b6a66c6",
+   "id": "a25f5e1b",
    "metadata": {},
    "source": [
-    "_(ii)_ In the context of the `Boston` dataset, state the null and alternative hypotheses.\n",
     "\n",
-    "_(iii)_ Review the model output, using `summary()`. Does it appear that both `dis` and `rm` are predictive of `medv`? How did you determine this?\n",
-    "\n",
-    "_(iv)_ We can use the inbuilt `sm.graphics.plot_regress_exog` function to generate helpful diagnostic plots (Hint: provide `plot_regress_exog` with the multiple regression model). Review the first generated plot, 'Residuals vs. Fitted'. Which observations are outliers? What impact might outliers have on our model?"
+    "_(iv)_ How many predictor variables do we have (Hint: all variables other than `class`)? "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c0d1d6f",
+   "id": "bd7b0910",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here"
+    "# Your answer here"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "02726275-c15a-4629-9b2c-19184b0d9fbb",
+   "id": "d631e8e3",
    "metadata": {},
    "source": [
-    "_(v)_ Fit a second model, this time including an interaction between the two predictor variables. Is there an interaction? (Hint: add a variable `x1 * x2` where `x1` and `x2` are the predictor variables). State an interpretation of the interaction, in the context of the `Boston` dataset, in one or two sentences."
+    "You can use `print()` and `describe()` to help answer these questions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa3832d7",
+   "metadata": {},
+   "source": [
+    "#### **Question 2:** \n",
+    "#### Standardization and data-splitting\n",
+    "\n",
+    "Next, we must preform 'pre-processing' or 'data munging', to prepare our data for classification/prediction. For KNN, there are three essential steps. A first essential step is to 'standardize' the predictor variables. We can achieve this using the scaler method, provided as follows:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "789da998",
+   "id": "cc899b59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here"
+    "# Select predictors (excluding the last column)\n",
+    "predictors = wine_df.iloc[:, :-1]\n",
+    "\n",
+    "# Standardize the predictors\n",
+    "scaler = StandardScaler()\n",
+    "predictors_standardized = pd.DataFrame(scaler.fit_transform(predictors), columns=predictors.columns)\n",
+    "\n",
+    "# Display the head of the standardized predictors\n",
+    "print(predictors_standardized.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9981ca48",
+   "metadata": {},
+   "source": [
+    "(i) Why is it important to standardize the predictor variables?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "403ef0bb",
+   "metadata": {},
+   "source": [
+    "> Your answer here..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e2e1bea",
+   "metadata": {},
+   "source": [
+    "(ii) Why did we elect not to standard our response variable `Class`?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdee5a15",
+   "metadata": {},
+   "source": [
+    "> Your answer here..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8077ec21",
+   "metadata": {},
+   "source": [
+    "(iii) A second essential step is to set a random seed. Do so below (Hint: use the random.seed function). Why is setting a seed important? Is the particular seed value important? Why or why not?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "5ef2d5ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Do not touch\n",
+    "random.seed(123)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0676c21",
+   "metadata": {},
+   "source": [
+    "> Your answer here..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36ab9229",
+   "metadata": {},
+   "source": [
+    "(iv) A third essential step is to split our standardized data into separate training and testing sets. We will split into 75% training and 25% testing. The provided code randomly partitions our data, and creates linked training sets for the predictors and response variables. \n",
+    "\n",
+    "Extend the code to create a non-overlapping test set for the predictors and response variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "78a88a6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a random vector of True and False values to split the data\n",
+    "split = np.random.choice([True, False], size=len(predictors_standardized), replace=True, p=[0.75, 0.25])\n",
+    "\n",
+    "# Your code here..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4604ee03",
+   "metadata": {},
+   "source": [
+    "#### **Question 3:**\n",
+    "#### Model initialization and cross-validation\n",
+    "We are finally set to fit the KNN model. \n",
+    "\n",
+    "\n",
+    "Perform a grid search to tune the `n_neighbors` hyperparameter using 10-fold cross-validation. Follow these steps:\n",
+    "\n",
+    "1. Initialize the KNN classifier using `KNeighborsClassifier()`.\n",
+    "2. Define a parameter grid for `n_neighbors` ranging from 1 to 50.\n",
+    "3. Implement a grid search using `GridSearchCV` with 10-fold cross-validation to find the optimal number of neighbors.\n",
+    "4. After fitting the model on the training data, identify and return the best value for `n_neighbors` based on the grid search results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08818c64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f76bf62",
+   "metadata": {},
+   "source": [
+    "#### **Question 4:**\n",
+    "#### Model evaluation\n",
+    "\n",
+    "Using the best value for `n_neighbors`, fit a KNN model on the training data and evaluate its performance on the test set using `accuracy_score`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffefa9f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here..."
    ]
   },
   {
@@ -255,12 +329,17 @@
    "source": [
     "# Criteria\n",
     "\n",
-    "|Criteria            |Complete           |Incomplete          |\n",
-    "|--------------------|---------------|--------------|\n",
-    "|Simple Linear Regression - Standard errors for $B_0$ and $B_1$|The standard errors are correct.|The standard errors are not correct.|\n",
-    "|Simple Linear Regression - Confidence intervals for $B_0$ and $B_1$|The confidence intervals are correct.|The confidence intervals are not correct.|\n",
-    "|Multiple Linear Regression - Null and alternative hypotheses|The relationship for both hypotheses has been correctly identified.|The relationship for both hypotheses has been incorrectly identified.|\n",
-    "|Multiple Linear Regression - Interpretation of the interaction|The interaction has been correctly identified.|The interaction has been incorrectly identified.|"
+    "Here’s the updated rubric with **data inspection** and **scaling** placed first:\n",
+    "\n",
+    "| **Criteria**                                           | **Complete**                                      | **Incomplete**                                    |\n",
+    "|--------------------------------------------------------|---------------------------------------------------|--------------------------------------------------|\n",
+    "| **Data Inspection**                                    | Data is inspected for number of variables, observations and data types. | Data inspection is missing or incomplete.         |\n",
+    "| **Data Scaling**                                       | Data scaling or normalization is applied where necessary (e.g., using `StandardScaler`). | Data scaling or normalization is missing or incorrectly applied. |\n",
+    "| **Model Initialization**                               | The KNN model is correctly initialized and a random seed is set for reproducibility.            | The KNN model is not initialized, is incorrect, or lacks a random seed for reproducibility. |\n",
+    "| **Parameter Grid for `n_neighbors`**                   | The parameter grid for `n_neighbors` is correctly defined. | The parameter grid is missing or incorrectly defined. |\n",
+    "| **Cross-Validation Setup**                             | Cross-validation is set up correctly with 10 folds. | Cross-validation is missing or incorrectly set up. |\n",
+    "| **Best Hyperparameter (`n_neighbors`) Selection**       | The best value for `n_neighbors` is identified using the grid search results. | The best `n_neighbors` is not selected or incorrect. |\n",
+    "| **Model Evaluation on Test Data**                      | The model is evaluated on the test data using accuracy. | The model evaluation is missing or uses the wrong metric. |\n"
    ]
   },
   {
@@ -290,7 +369,7 @@
     "- [ ] Reviewed the PR description guidelines and adhered to them.\n",
     "- [ ] Verify that the link is accessible in a private browser window.\n",
     "\n",
-    "If you encounter any difficulties or have questions, please don't hesitate to reach out to our team via our Slack at `#cohort-3-help`. Our Technical Facilitators and Learning Support staff are here to help you navigate any challenges.\n"
+    "If you encounter any difficulties or have questions, please don't hesitate to reach out to our team via our Slack at `#cohort-4-help`. Our Technical Facilitators and Learning Support staff are here to help you navigate any challenges.\n"
    ]
   }
  ],
@@ -310,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.19"
   },
   "vscode": {
    "interpreter": {
